<resources>
    <string name="app_name">TestLogin</string>
    <string name="enter">Enter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome">matrix@virtual_reality: Welcome, %1$s</string>
    <string name="welcome_dots">matrix@virtual_reality: ...</string>
</resources>