<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp">

    <EditText
        android:id="@+id/fragment_login_username"
        android:background="@drawable/button_white"
        android:hint="@string/username"
        android:textSize="20sp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="16dp"/>
    <EditText
        android:layout_below="@+id/fragment_login_username"
        android:id="@+id/fragment_login_password"
        android:background="@drawable/button_white"
        android:hint="@string/password"
        android:textSize="20sp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_margin="8dp"/>
    <EditText
        android:layout_below="@+id/fragment_login_password"
        android:id="@+id/fragment_login_email"
        android:background="@drawable/button_white"
        android:hint="@string/email"
        android:textSize="20sp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_margin="8dp"/>
    <EditText
        android:id="@+id/fragment_login_phone"
        android:layout_below="@id/fragment_login_email"
        android:background="@drawable/button_white"
        android:hint="@string/phone_number"
        android:textSize="20sp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_margin="8dp"/>
    <Button
        android:text="@string/login"
        android:background="@drawable/button_black"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:id="@+id/fragment_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/fragment_login_phone"
        android:layout_margin="8dp"
        />


</RelativeLayout>